--- a/web/src/index.css
+++ b/web/src/index.css
@@ -23,3 +23,27 @@
     @apply bg-zinc-950 text-zinc-100 antialiased;
   }
 }
+
+#scrollBar {
+ &::-webkit-scrollbar {
+    width: 8px;   /* largura da barra vertical */
+    height: 8px;  /* altura da barra horizontal */
+  }
+
+  /* Trilho (fundo da barra) */
+  &::-webkit-scrollbar-track {
+    background: #3f3f46;
+    border-radius: 10px;
+  }
+
+  /* "Thumb" (a parte que desliza) */
+  &::-webkit-scrollbar-thumb {
+    background: #f59e0b;
+    border-radius: 10px;
+  }
+
+  /* Efeito hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: #fbbf24;
+  }
+}
